--- a/myshop/orders/templates/orders/order/create.html
+++ b/myshop/orders/templates/orders/order/create.html
@@ -3,22 +3,28 @@
 {% block title %}Checkout{% endblock %}
 
 {% block content %}
-    <h1>Checkout</h1>
-    <div class="order-info">
-        <h3>Your order</h3>
-        <ul>
-            {% for item in cart %}
+<div class="create-wrapper">
+    <div class="create-container">
+        <h1>Checkout</h1>
+        <div class="order-info">
+            <h3>Your order</h3>
+            <ul>
+                {% for item in cart %}
                 <li>
                     {{ item.quantity }}x {{ item.product.name }}
                     <span>${{ item.total_price }}</span>
                 </li>
-            {% endfor %}
-        </ul>
-        <p>Total: ${{ cart.get_total_price }}</p>
+                {% endfor %}
+            </ul>
+            <p>Total: ${{ cart.get_total_price }}</p>
+        </div>
+        <div class="order-form-container">
+            <form action="." method="post" class="order-form">
+                {{ form.as_p }}
+                <p><input type="submit" value="Place order"></p>
+                {% csrf_token %}
+            </form>
+        </div>
     </div>
-    <form action="." method="post" class="order-form">
-        {{ form.as_p }}
-        <p><input type="submit" value="Place order"></p>
-        {% csrf_token %}
-    </form>
+</div>
 {% endblock %}
