--- a/myshop/orders/templates/orders/order/created.html
+++ b/myshop/orders/templates/orders/order/created.html
@@ -3,7 +3,11 @@
 {% block title %}Thank you{% endblock %}
 
 {% block content %}
+<div class="create-wrapper">
+    <div class="create-container">
     <h1>Thank you</h1>
     <p>Your order has been successfully completed. Your order number is
         <strong>{{ order.id }}</strong>.</p>
+    </div>
+</div>
 {% endblock %}
