--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -9,18 +9,18 @@
 <body>
 <div id="header">
     <div>
-        <a href="/" class="logo">My shop</a>
+        <a href="/" class="logo">Мой магазин</a>
     </div>
     <div class="cart">
         {% with total_items=cart|length %}
         {% if cart|length > 0 %}
-        Your cart:
+        Ваша корзина:
         <a href="{% url "cart:cart_detail" %}">
         {{ total_items }} item{{ total_items|pluralize }},
         ${{ cart.get_total_price }}
         </a>
         {% else %}
-        Your cart is empty.
+        Корзина пуста
         {% endif %}
         {% endwith %}
     </div>
