--- a/myshop/cart/templates/cart/detail.html
+++ b/myshop/cart/templates/cart/detail.html
@@ -6,16 +6,16 @@
 {% block content %}-
 <div class="cart-wrapper">
     <div class="cart-container">
-        <div><h1>Your shopping cart</h1></div>
+        <div><h1>Корзина</h1></div>
         <table class="cart">
             <thead>
             <tr>
-                <th>Image</th>
-                <th>Product</th>
-                <th>Quantity</th>
-                <th>Unit price</th>
-                <th>Price</th>
-                <th>Remove</th>
+                <th>Фото</th>
+                <th>Название</th>
+                <th>Количество</th>
+                <th>Цена</th>
+                <th>Стоимость</th>
+                <th>Удалить</th>
             </tr>
             </thead>
             <tbody>
@@ -36,7 +36,7 @@
                 <td>{{ item.quantity }}</td>
                 <td class="num">${{ item.price }}</td>
                 <td class="num">${{ item.total_price }}</td>
-                <td><a href="{% url "cart:cart_remove" product.id%}">Remove</a></td>
+                <td><a href="{% url "cart:cart_remove" product.id%}">Удалить</a></td>
             </tr>
             {% endwith %}
             {% endfor %}
@@ -48,10 +48,8 @@
             </tbody>
         </table>
         <p class="text-right">
-            <a href="{% url "shop:product_list" %}" class="button light">Continue shopping</a>
-            <a href="{% url "orders:order_create" %}" class="button">
-            Checkout
-            </a>
+            <a href="{% url "shop:product_list" %}" class="button light">Продолжить покупки</a>
+            <a href="{% url "orders:order_create" %}" class="button">Оформить</a>
         </p>
     </div>
 </div>
