--- a/myshop/orders/templates/orders/order/create.html
+++ b/myshop/orders/templates/orders/order/create.html
@@ -5,9 +5,9 @@
 {% block content %}
 <div class="create-wrapper">
     <div class="create-container">
-        <h1>Checkout</h1>
+        <h1>Оформление заказа</h1>
         <div class="order-info">
-            <h3>Your order</h3>
+            <h3>Ваш заказ</h3>
             <ul>
                 {% for item in cart %}
                 <li>
@@ -16,12 +16,12 @@
                 </li>
                 {% endfor %}
             </ul>
-            <p>Total: ${{ cart.get_total_price }}</p>
+            <p>{{ cart.get_total_price }}</p>
         </div>
         <div class="order-form-container">
             <form action="." method="post" class="order-form">
                 {{ form.as_p }}
-                <p><input type="submit" value="Place order"></p>
+                <p><input type="submit" value="Заказать"></p>
                 {% csrf_token %}
             </form>
         </div>
