--- a/myshop/orders/templates/orders/order/created.html
+++ b/myshop/orders/templates/orders/order/created.html
@@ -5,8 +5,8 @@
 {% block content %}
 <div class="create-wrapper">
     <div class="create-container">
-    <h1>Thank you</h1>
-    <p>Your order has been successfully completed. Your order number is
+    <h1>Спасибо за заказ!</h1>
+    <p>Ваш заказ успешно оформлен. Номер вашего заказа: 
         <strong>{{ order.id }}</strong>.</p>
     </div>
 </div>
