мелкие правки стилей

--- a/myshop/static/css/base.css
+++ b/myshop/static/css/base.css
@@ -144,7 +144,7 @@ body {
     margin-bottom: 20px;
 }
 
-/* Product List Grid */
+/* -------------------------Product List Grid----------------------------------- */
 /* Стили для сетки с товарами */
 .product-list {
     display: grid; /* Используем CSS Grid для создания сетки */
@@ -152,7 +152,7 @@ body {
     gap: 20px; /* Отступы между элементами */
 }
 
-/* Cart Wrapper */
+/* --------------------------------Cart Wrapper---------------------------------- */
 .cart-wrapper {
     width: 100%;
     display: flex;
@@ -243,7 +243,7 @@ body {
     color: #007bff; /* Цвет итоговой суммы */
 }
 
-/* Product Item */
+/* --------------------------Product Item------------------------------------------ */
 /* Стили для каждого товара в списке */
 .product-list .item {
     background-color: #fff;
@@ -288,7 +288,7 @@ body {
     margin-top: 5px;
 }
 
-/* Product Detail */
+/* ------------------------------Product Detail-------------------------------------------------- */
 /* Контейнер для детальной информации о продукте */
 .product-detail {
     display: flex; /* Используем Flexbox для горизонтального расположения */
@@ -378,7 +378,7 @@ body {
         gap: 10px; /* Меньше отступов на мобильных */
     }
 }
-/* Оформление страницы заказа */
+/* -----------------------------------Оформление страницы заказа-------------------------------- */
 /* Общий стиль для контейнера */
 .create-wrapper {
     display: flex;
