--- a/myshop/shop/templates/shop/product/detail.html
+++ b/myshop/shop/templates/shop/product/detail.html
@@ -7,9 +7,11 @@
 <div class="product-container">
     <div class="product-detail">
         <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
-        <h1>{{ product.name }}</h1>
+        <div>
+            <h1>{{ product.name }}</h1>
+            <p class="description">{{ product.description }}</p>
+        </div>
     <!--<h2><a href="{{ product.category.get_absolute_url }}">{{ product.category }}</a></h2>-->
-        <p class="description">{{ product.description }}</p>
         <p class="price">${{ product.price }}</p>
         <div class="product-detail-form">
             <form action="{% url "cart:cart_add" product.id %}" method="post">
