--- a/myshop/shop/templates/shop/product/list.html
+++ b/myshop/shop/templates/shop/product/list.html
@@ -25,8 +25,10 @@
                 <a href="{{ product.get_absolute_url }}">
                     <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
                 </a>
-                <a href="{{ product.get_absolute_url }}">{{ product.name }}</a><br>
-                ${{ product.price }}
+                <div class="description">
+                    <a href="{{ product.get_absolute_url }}">{{ product.name }}</a><br>
+                    ${{ product.price }}
+                </div>
             </div>
             {% endfor %}
         </div>
