мелкие правки стилей

--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -16,7 +16,7 @@
         {% if cart|length > 0 %}
         Ваша корзина:
         <a href="{% url "cart:cart_detail" %}">
-        {{ total_items }} item{{ total_items|pluralize }},
+        {{ total_items }} шт{{ total_items|pluralize }},
         ${{ cart.get_total_price }}
         </a>
         {% else %}
