--- a/myshop/cart/templates/cart/detail.html
+++ b/myshop/cart/templates/cart/detail.html
@@ -41,7 +41,7 @@
             {% endwith %}
             {% endfor %}
             <tr class="total">
-                <td>Total</td>
+                <td>Итог</td>
                 <td colspan="4"></td>
                 <td class="num">${{ cart.get_total_price }}</td>
             </tr>
