--- a/myshop/cart/templates/cart/detail.html
+++ b/myshop/cart/templates/cart/detail.html
@@ -1,7 +1,7 @@
 {% extends "shop/base.html" %}
 {% load static %}
 {% block title %}
-    Your shopping cart
+    Ваша корзина
 {% endblock %}
 {% block content %}-
 <div class="cart-wrapper">
