--- a/myshop/orders/templates/orders/order/create.html
+++ b/myshop/orders/templates/orders/order/create.html
@@ -1,6 +1,6 @@
 {% extends "shop/base.html" %}
 
-{% block title %}Checkout{% endblock %}
+{% block title %}Оформление заказа{% endblock %}
 
 {% block content %}
 <div class="create-wrapper">
