--- a/myshop/orders/templates/orders/order/created.html
+++ b/myshop/orders/templates/orders/order/created.html
@@ -1,6 +1,6 @@
 {% extends "shop/base.html" %}
 
-{% block title %}Thank you{% endblock %}
+{% block title %}Спасибо за покупку!{% endblock %}
 
 {% block content %}
 <div class="create-wrapper">
