--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>{% block title %}My shop{% endblock %}</title>
+    <title>{% block title %}Мой магазин{% endblock %}</title>
     <link href="{% static "css/base.css" %}" rel="stylesheet">
 </head>
 <body>
@@ -16,7 +16,7 @@
         {% if cart|length > 0 %}
         Ваша корзина:
         <a href="{% url "cart:cart_detail" %}">
-        {{ total_items }} шт{{ total_items|pluralize }},
+        {{ total_items }} шт,
         ${{ cart.get_total_price }}
         </a>
         {% else %}
